<resources>
    <string name="app_name">MyCaloriesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="logingbtn">Login</string>
    <string name="or">Or</string>
    <string name="creatbtn">Create account</string>
    <string name="choesGoal">Chose Your Goal</string>
    <string name="LoseWeight">Lose Weight</string>
    <string name="amplification">Amplification</string>
    <string name="dry">Drying</string>
    <string name="gain">Gain Weight</string>
    <string name="maintain">Maintain Weight</string>
    <string name="Next">Next</string>
    <string name="ActivityLevel">Choose Your Activity Level</string>
    <string name="light">Light: exercise 1-3 times/week</string>
    <string name="moderate">Moderate_ exercise 4-5 times/week</string>
    <string name="active">Active: daily exercise or intense exercise 3-4 times/week</string>
    <string name="VeryActive">Very Active: intense exercise 6-7 times/week</string>
    <string name="Gender">Choose your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Write Your Age</string>
    <string name="height">Write Your Height</string>
    <string name="weight">Write Your weight</string>
    <string name="account">Create Account</string>


</resources>