<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ChoseYourGoalFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/choes_your_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choesGoal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/lose_weight_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/LoseWeight"
        android:textColor="@color/buttonColor"
        android:textSize="14sp"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choes_your_goal" />

    <Button
        android:id="@+id/gain_weight_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/gain"
        android:textColor="@color/buttonColor"
        android:textSize="14sp"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choes_your_goal" />

    <Button
        android:id="@+id/maintain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:backgroundTint="#000000"
        android:text="@string/maintain"
        android:textColor="@color/buttonColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choes_your_goal" />

    <Button
        android:id="@+id/Next_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/Next"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choes_your_goal" />


</androidx.constraintlayout.widget.ConstraintLayout>