<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".infoFragment2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:gravity="left"
        android:textColor="#FFFFFF"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/height_txt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/edittextColor"
        android:ems="10"
        android:hint="180 CM"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:gravity="left"
        android:textColor="#FFFFFF"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/weight_txt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/edittextColor"
        android:ems="10"
        android:hint="80 KG"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        />

    <Button
        android:id="@+id/info2_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/Next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

</LinearLayout>